fix: New Chinese Simplified translations from Crowdin [ci skip]

--- a/shared/i18n/locales/zh_CN/translation.json
+++ b/shared/i18n/locales/zh_CN/translation.json
@@ -191,7 +191,7 @@
   "Collection deleted": "文档集已删除",
   "I’m sure – Delete": "确认删除",
   "Deleting": "正在删除",
-  "Are you sure about that? Deleting the <em>{{collectionName}}</em> collection is permanent and cannot be restored, however all published documents within will be moved to the trash.": "你确定吗？ 删除 <em>{{collectionName}}</em> 文档集是永久性的且无法恢复，但其中所有已发布的文档将被移至回收站。",
+  "Are you sure about that? Deleting the <em>{{collectionName}}</em> collection is permanent and cannot be restored, however all published documents within will be moved to the trash.": "您确定吗？ 删除 <em>{{collectionName}}</em> 文档集是永久性的且无法恢复，但其中所有已发布的文档将被移至回收站。",
   "Also, <em>{{collectionName}}</em> is being used as the start view – deleting it will reset the start view to the Home page.": "另外，<em>{{collectionName}}</em> 被用作起始视图 - 删除它将重置起始视图为主页。",
   "Type a command or search": "输入命令或搜索",
   "Choose a template": "选择模板",
@@ -430,7 +430,7 @@
   "{{ releasesBehind }} versions behind_plural": "落后 {{ releasesBehind }} 个版本",
   "Change permissions?": "更改权限？",
   "{{ documentName }} cannot be moved within {{ parentDocumentName }}": "{{ documentName }} 不能在 {{ parentDocumentName }} 中被移动",
-  "You can't reorder documents in an alphabetically sorted collection": "你不能在按字母排序的文档集中排序",
+  "You can't reorder documents in an alphabetically sorted collection": "当前集合为字母顺序排序，暂不支持手动调整文档顺序。",
   "The {{ documentName }} cannot be moved here": "{{ documentName }} 不能被移动到这里",
   "Return to App": "返回应用",
   "Installation": "安装",
@@ -733,9 +733,9 @@
   "Backlinks": "反向链接",
   "This document is large which may affect performance": "此文档较大，可能会影响性能",
   "Are you sure you want to delete the <em>{{ documentTitle }}</em> template?": "确认删除 <em>{{ documentTitle }}</em> 文档模板？",
-  "Are you sure about that? Deleting the <em>{{ documentTitle }}</em> document will delete all of its history</em>.": "你确定吗？删除 <em>{{ documentTitle }}</em> 文档将一并清除其所有历史记录</em>。",
-  "Are you sure about that? Deleting the <em>{{ documentTitle }}</em> document will delete all of its history and <em>{{ any }} nested document</em>.": "你确定吗？删除文档 <em>{{ documentTitle }}</em> 将一并删除其所有历史记录与其包含的 <em>{{ any }} 份子文档</em>。",
-  "Are you sure about that? Deleting the <em>{{ documentTitle }}</em> document will delete all of its history and <em>{{ any }} nested document</em>._plural": "你确定吗？删除文档 <em>{{ documentTitle }}</em> 将一并删除其所有历史记录与其包含的 <em>{{ any }} 份子文档</em>。",
+  "Are you sure about that? Deleting the <em>{{ documentTitle }}</em> document will delete all of its history</em>.": "您确定吗？删除 <em>{{ documentTitle }}</em> 文档将一并删除其所有历史记录</em>。",
+  "Are you sure about that? Deleting the <em>{{ documentTitle }}</em> document will delete all of its history and <em>{{ any }} nested document</em>.": "您确定吗？删除文档 <em>{{ documentTitle }}</em> 将一并删除其所有历史记录与其包含的 <em>{{ any }} 份子文档</em>。",
+  "Are you sure about that? Deleting the <em>{{ documentTitle }}</em> document will delete all of its history and <em>{{ any }} nested document</em>._plural": "你确定吗？删除文档 <em>{{ documentTitle }}</em> 将一并删除其所有历史记录与其包含的 <em>{{ any }} 个嵌套文档</em>。",
   "If you’d like the option of referencing or restoring the {{noun}} in the future, consider archiving it instead.": "如果你将来希望引用或还原{{noun}}，请考虑将其存档。",
   "Select a location to move": "选择要移动的目标位置",
   "Document moved": "文档已被移动",
@@ -849,7 +849,7 @@
   "Your account uses email sign-in, please sign-in with email to continue.": "你的账户使用电子邮件登录，请使用电子邮件进行登录以继续。",
   "An email sign-in link was recently sent, please check your inbox or try again in a few minutes.": "最近已发送了一封电子邮件登录链接，请检查你的收件箱或稍后再试。",
   "Authentication failed – we were unable to sign you in at this time. Please try again.": "身份验证失败 - 我们现在无法让你登录，请重试。",
-  "Authentication failed – you do not have permission to access this workspace.": "身份验证失败 - 你没有访问此工作区的权限。",
+  "Authentication failed – you do not have permission to access this workspace.": "身份验证失败 - 您无权访问此工作区。",
   "Sorry, it looks like that sign-in link is no longer valid, please try requesting another.": "抱歉，看起来该登录链接已经失效，请尝试其他链接。",
   "Your account has been suspended. To re-activate your account, please contact a workspace admin.": "你的账户已被停用。若要重新激活你的账户，请联系工作区管理员。",
   "This workspace has been suspended. Please contact support to restore access.": "此工作区已暂停。 请联系支持人员以恢复访问权限。",
@@ -1064,7 +1064,7 @@
   "Danger": "危险操作",
   "You can delete this entire workspace including collections, documents, and users.": "你可以删除整个工作区，包括文档集、文档和用户。",
   "Export data": "导出数据",
-  "A full export might take some time, consider exporting a single document or collection. You may leave this page once the export has started – if you have notifications enabled, we will email a link to <em>{{ userEmail }}</em> when it’s complete.": "完整导出可能需要一些时间，请考虑导出单个文档或文档集。导出的数据是 Markdown 格式的文档压缩包。当导出已开始时你可以离开此页面。如果你开启了通知，当导出完成后，我们会发送链接至邮箱 <em>{{ userEmail }}</em>。",
+  "A full export might take some time, consider exporting a single document or collection. You may leave this page once the export has started – if you have notifications enabled, we will email a link to <em>{{ userEmail }}</em> when it’s complete.": "完整导出可能需要一些时间，请考虑导出单个文档或文档集。导出的数据是 Markdown 格式的文档压缩包。当导出已开始时您可以离开此页面。如果你开启了通知，当导出完成后，我们会发送链接至电子邮箱 <em>{{ userEmail }}</em>。",
   "Recent exports": "最近导出",
   "Manage optional and beta features. Changing these settings will affect the experience for all members of the workspace.": "管理可选功能和测试功能。更改这些设置将影响工作组内所有成员的使用。",
   "Separate editing": "独立编辑",
@@ -1073,7 +1073,7 @@
   "Create a group": "创建群组",
   "Could not load groups": "无法加载组",
   "New group": "新建群组",
-  "Groups can be used to organize and manage the people on your team.": "使用群组来组织和管理你的团队成员。",
+  "Groups can be used to organize and manage the people on your team.": "使用群组来管理您的团队成员。",
   "No groups have been created yet": "没有群组可供加入",
   "Import a zip file of Markdown documents (exported from version 0.67.0 or earlier)": "导入包含 Markdown 文档的 zip 文件 (从 0.67.0 或更早版本导出)",
   "Import data": "导入数据",
@@ -1125,7 +1125,7 @@
   "Show line numbers on code blocks in documents.": "在文档中的代码块上显示行号。",
   "When enabled, documents have a separate editing mode. When disabled, documents are always editable when you have permission.": "启用时，文档为独立编辑模式。禁用时，文档在你拥有权限时始终可编辑。",
   "Remember previous location": "记住上一次的位置",
-  "Automatically return to the document you were last viewing when the app is re-opened.": "重新打开应用程序时自动返回到你上次浏览的文档。",
+  "Automatically return to the document you were last viewing when the app is re-opened.": "重新打开应用程序时自动返回到您上次浏览的文档。",
   "Smart text replacements": "智能文本替换",
   "Auto-format text by replacing shortcuts with symbols, dashes, smart quotes, and other typographical elements.": "用符号、破折号、 智能引号和其他排版元素替换快捷方式来自动格式化文本。",
   "You may delete your account at any time, note that this is unrecoverable": "您可以随时删除您的帐户，请注意这不可恢复",
@@ -1177,10 +1177,10 @@
   "You are creating a new workspace using your current account — <em>{{email}}</em>": "你正在使用当前账户创建新的工作区 —— <em>{{email}}</em>",
   "To create a workspace under another email please sign up from the homepage": "若需使用其他电子邮箱创建工作区，请前往首页完成注册。",
   "Trash emptied": "回收站为空",
-  "Are you sure you want to permanently delete all the documents in Trash? This action is immediate and cannot be undone.": "你确定要永久删除回收站中的所有文档吗？此操作是立即的且无法撤消。",
+  "Are you sure you want to permanently delete all the documents in Trash? This action is immediate and cannot be undone.": "您确定要永久删除回收站中的所有文档吗？此操作是立即的且无法撤消。",
   "Recently deleted": "最近删除的",
   "Trash is empty at the moment.": "回收站为空。",
-  "A confirmation code has been sent to your email address, please enter the code below to permanently destroy your account.": "验证码已经发送至你的电子邮箱，请在下面输入代码以永久销毁你的账户。",
+  "A confirmation code has been sent to your email address, please enter the code below to permanently destroy your account.": "验证码已经发送至您的电子邮箱，请在下面输入代码以永久删除您的账户。",
   "Are you sure? Deleting your account will destroy identifying data associated with your user and cannot be undone. You will be immediately logged out of {{appName}} and all your API tokens will be revoked.": "你确定吗？注销你的账户将销毁与你的用户相关联的识别数据并且无法撤消。你将立即退出 {{appName}}，并且你的所有 API token 都将被撤销。",
   "Delete my account": "删除我的帐户",
   "Today": "今天",
@@ -1199,7 +1199,7 @@
   "The owner of GitHub account has been requested to install the {{githubAppName}} GitHub app. Once approved, previews will be shown for respective links.": "GitHub帐户的所有者已被要求安装 {{githubAppName}} GitHub应用程序。一旦批准，预览将显示各自的链接。",
   "Enable previews of GitHub issues and pull requests in documents by connecting a GitHub organization or specific repositories to {appName}.": "通过连接GitHub组织或特定存储库到 {appName}，可以在文档中预览GitHub issues和pull requests。",
   "Enabled by {{integrationCreatedBy}}": "由 {{integrationCreatedBy}} 启用",
-  "Disconnecting will prevent previewing GitHub links from this organization in documents. Are you sure?": "断开连接后将无法在文档中预览来自此组织的GitHub链接。你确定吗？",
+  "Disconnecting will prevent previewing GitHub links from this organization in documents. Are you sure?": "断开连接后将无法在文档中预览此 GitHub 组织内的链接。您确定吗？",
   "The GitHub integration is currently disabled. Please set the associated environment variables and restart the server to enable the integration.": "Github 集成当前已禁用。请设置相关的环境变量并重新启动服务以启用此集成。",
   "Google Analytics": "谷歌分析",
   "Add a Google Analytics 4 measurement ID to send document views and analytics from the workspace to your own Google Analytics account.": "添加 Google Analytics 4 Measurement ID 后会将文档访问量和分析从工作区发送到你自己的 Google Analytics 帐户。",
@@ -1208,7 +1208,7 @@
   "Whoops, you need to accept the permissions in Linear to connect {{appName}} to your workspace. Try again?": "糟糕，你需要在 Linear 中接受权限才能将 {{appName}} 连接到你的工作区。再试一次？",
   "Something went wrong while processing your request. Please try again.": "处理你的请求时出错。请重试。",
   "Enable previews of Linear issues in documents by connecting a Linear workspace to {appName}.": "将一个 Linear 工作区连接到 {appName} 从而可以在文档中预览 Linear Issues。",
-  "Disconnecting will prevent previewing Linear links from this workspace in documents. Are you sure?": "断开链接将会使此工作区中文档中的 Linear 链接不再可以被预览。你确定吗？",
+  "Disconnecting will prevent previewing Linear links from this workspace in documents. Are you sure?": "断开连接后将无法在工作区中的文档中预览 Linear 链接。您确定吗？",
   "The Linear integration is currently disabled. Please set the associated environment variables and restart the server to enable the integration.": "Linear 集成已被禁用。请设置相关的环境变量并重新启动服务以启用此集成。",
   "Configure a Matomo installation to send views and analytics from the workspace to your own Matomo instance.": "配置安装 Matomo ，将视图和分析从工作区发送至您的 Matomo 实例。",
   "Instance URL": "实例 URL",
@@ -1223,7 +1223,7 @@
   "Posting to the <em>{{ channelName }}</em> channel on": "发布到 <em>{{ channelName }}</em> 频道",
   "These events should be posted to Slack": "这些事件应该发布到 Slack",
   "This will prevent any future updates from being posted to this Slack channel. Are you sure?": "这将阻止将来的任何更新被发布到此Slack频道。你确定吗？",
-  "Whoops, you need to accept the permissions in Slack to connect {{appName}} to your workspace. Try again?": "糟糕，你需要在 Slack 中接受权限才能将 {{appName}} 连接到你的工作区。再试一次？",
+  "Whoops, you need to accept the permissions in Slack to connect {{appName}} to your workspace. Try again?": "糟糕，您需要在 Slack 中完成授权才能将 {{appName}} 连接到你的工作区。再试一次？",
   "Personal account": "个人账号",
   "Link your {{appName}} account to Slack to enable searching and previewing the documents you have access to, directly within chat.": "只需将您的 {{appName}} 账户关联至 Slack ，即可在聊天界面中无缝搜索并预览您有权访问的所有文档。",
   "Disconnecting your personal account will prevent searching for documents from Slack. Are you sure?": "解除您个人账户的关联后，将无法再从 Slack 中搜索文档。是否确认继续？",
@@ -1245,7 +1245,7 @@
   "Script name": "脚本名称",
   "The name of the script file that Umami uses to track analytics.": "Umami 用于跟踪分析的脚本文件名称。",
   "An ID that uniquely identifies the website in your Umami instance.": "在您的 Umami 实例中识别网站的唯一ID。",
-  "Are you sure you want to delete the {{ name }} webhook?": "你确定要删除这个 {{ name }} webhook 吗？",
+  "Are you sure you want to delete the {{ name }} webhook?": "您确定要删除这个 {{ name }} webhook 吗？",
   "Webhook updated": "Webhook 已更新",
   "Update": "更新",
   "Updating": "正在更新",
@@ -1253,7 +1253,7 @@
   "A memorable identifer": "一个容易记的名称",
   "URL": "URL",
   "Signing secret": "签名密钥",
-  "Subscribe to all events, groups, or individual events. We recommend only subscribing to the minimum amount of events that your application needs to function.": "订阅所有事件、群组或单个事件。我们建议你只订阅应用程序运行所需的最少数量的事件。",
+  "Subscribe to all events, groups, or individual events. We recommend only subscribing to the minimum amount of events that your application needs to function.": "您可选择订阅全部事件、特定事件组或单个事件。出于安全与效率考虑，建议仅订阅您的应用运行所必需的最小事件集合。",
   "All events": "全部事件",
   "All {{ groupName }} events": "全部 {{ groupName }} 事件",
   "Delete webhook": "删除 Webhook",
