fix: New Chinese Simplified translations from Crowdin [ci skip]

--- a/shared/i18n/locales/zh_CN/translation.json
+++ b/shared/i18n/locales/zh_CN/translation.json
@@ -1,9 +1,9 @@
 {
-  "New API key": "新建 API 密钥",
+  "New API key": "创建API密钥",
   "Delete": "删除",
-  "Revoke": "吊销",
-  "Revoke API key": "吊销 API 密钥",
-  "Revoke token": "吊销 token",
+  "Revoke": "撤销",
+  "Revoke API key": "撤销 API 密钥",
+  "Revoke token": "撤销令牌",
   "Open collection": "打开文档集",
   "New collection": "新建文档集",
   "Create a collection": "创建文档集",
@@ -449,12 +449,12 @@
   "Are you sure you want to suspend {{ userName }}? Suspended users will be prevented from logging in.": "您确定要停用账户 {{ userName }} 吗？被停用的用户将无法登录。",
   "New name": "新的名称",
   "Name can't be empty": "名称不能为空",
-  "Check your email to verify the new address.": "请检查您的电子邮箱以验证新地址。",
+  "Check your email to verify the new address.": "请检查您的电子邮箱以验证新的电子邮箱地址。",
   "The email will be changed once verified.": "验证后电子邮箱将被更改。",
-  "You will receive an email to verify your new address. It must be unique in the workspace.": "我们将向您的新电子邮箱地址发送一封验证邮件。请注意，该电子邮箱在工作区内需尚未被使用。",
-  "A confirmation email will be sent to the new address before it is changed.": "确认邮件将在更改前发送到新地址。",
-  "New email": "新的电子邮箱地址",
-  "Email can't be empty": "电子邮箱地址不能为空",
+  "You will receive an email to verify your new address. It must be unique in the workspace.": "您将收到一封电子邮件以验证您的新的电子邮箱地址。请注意，该电子邮箱在工作区内需尚未被使用。",
+  "A confirmation email will be sent to the new address before it is changed.": "更改之前，将向新的电子邮箱地址发送一封确认电子邮件。",
+  "New email": "新电子邮箱",
+  "Email can't be empty": "电子邮箱不能为空",
   "Your import completed": "导入已完成",
   "Sorry, invalid embed link": "抱歉，无效的嵌入链接",
   "Previous match": "上一匹配",
@@ -604,7 +604,7 @@
   "Contents": "目录",
   "Table of contents": "目录",
   "Change name": "更换名称",
-  "Change email": "更换电子邮箱地址",
+  "Change email": "更换电子邮箱",
   "Suspend user": "停用用户",
   "An error occurred while sending the invite": "发送邀请时遇到错误",
   "Change role": "更改角色",
@@ -769,7 +769,7 @@
   "You haven’t created any documents yet": "你尚未创建任何文档",
   "Documents you’ve recently viewed will be here for easy access": "你最近浏览过的文档将放在此处以方便快速访问",
   "We sent out your invites!": "您的邀请已发送！",
-  "Those email addresses are already invited": "此电子邮箱地址已被邀请",
+  "Those email addresses are already invited": "此电子邮箱已被邀请",
   "Sorry, you can only send {{MAX_INVITES}} invites at a time": "抱歉，你一次只能发送 {{MAX_INVITES}} 个邀请",
   "Invited {{roleName}} will receive access to": "被邀请的 {{roleName}} 将获得访问权限对",
   "{{collectionCount}} collections": "{{collectionCount}} 个文档集",
@@ -779,9 +779,9 @@
   "Can view and comment": "可以浏览和评论",
   "Invite people to join your workspace. They can sign in with {{signinMethods}} or use their email address.": "邀请成员或访客加入您的工作区。他们可以使用 {{signinMethods}} 或电子邮箱登录。",
   "Invite members to join your workspace. They will need to sign in with {{signinMethods}}.": "邀请成员加入你的工作区。他们需要通过 {{signinMethods}} 登录。",
-  "As an admin you can also <2>enable email sign-in</2>.": "作为管理员，您还可以 <2>启用电子邮箱登录</2>。",
+  "As an admin you can also <2>enable email sign-in</2>.": "作为管理员，您还可以 <2>启用电子邮件登录</2>。",
   "Invite as": "邀请作为",
-  "Email": "电子邮箱",
+  "Email": "电子邮件",
   "Add another": "再添加一个",
   "Inviting": "邀请中……",
   "Send Invites": "发送邀请",
@@ -840,7 +840,7 @@
   "subdomain": "子域",
   "Continue": "继续操作",
   "Sorry, the code you entered is invalid or has expired.": "对不起，您输入的验证码无效或已过期。",
-  "The domain associated with your email address has not been allowed for this workspace.": "与您电子邮箱地址相关联的域名未被允许在此工作区使用。",
+  "The domain associated with your email address has not been allowed for this workspace.": "与您电子邮件地址相关联的域名未被允许在此工作区使用。",
   "Unable to sign-in. Please navigate to your workspace's custom URL, then try to sign-in again.<1></1>If you were invited to a workspace, you will find a link to it in the invite email.": "无法登录。请打开您工作空间的专属链接，然后尝试重新登录。<1></1>如果您受邀加入某个工作区，相关链接可在您的邀请邮件中找到。",
   "Sorry, a new account cannot be created with a personal Gmail address.<1></1>Please use a Google Workspaces account instead.": "抱歉，不能使用个人 Gmail 地址创建新帐户。<1></1>请改用 Google Workspaces 帐户。",
   "The workspace associated with your user is scheduled for deletion and cannot be accessed at this time.": "与您的用户相关联的工作区已计划删除，目前无法访问。",
@@ -873,7 +873,7 @@
   "Choose workspace": "选择工作区",
   "This login method requires choosing your workspace to continue": "此登录方法需选择工作区方可继续",
   "Check your email": "检查您的电子邮箱",
-  "Enter the sign-in code sent to the email <em>{{ emailLinkSentTo }}</em>": "输入发送到电子邮箱的验证码 <em>{{ emailLinkSentTo }}</em>",
+  "Enter the sign-in code sent to the email <em>{{ emailLinkSentTo }}</em>": "输入发送到电子邮件的验证码 <em>{{ emailLinkSentTo }}</em>",
   "A magic sign-in link has been sent to the email <em>{{ emailLinkSentTo }}</em> if an account exists.": "如果帐户存在，魔法登录链接已发送至电子邮箱 <em>{{ emailLinkSentTo }}</em>。",
   "Back to login": "回到登录界面",
   "Get started by choosing a sign-in method for your new workspace below…": "请先选择您需要登录的工作区，再继续…",
@@ -1064,7 +1064,7 @@
   "Danger": "危险操作",
   "You can delete this entire workspace including collections, documents, and users.": "你可以删除整个工作区，包括文档集、文档和用户。",
   "Export data": "导出数据",
-  "A full export might take some time, consider exporting a single document or collection. You may leave this page once the export has started – if you have notifications enabled, we will email a link to <em>{{ userEmail }}</em> when it’s complete.": "完整导出可能需要一些时间，请考虑导出单个文档或文档集。导出的数据是 Markdown 格式的文档压缩包。当导出已开始时您可以离开此页面。如果你开启了通知，当导出完成后，我们会发送链接至电子邮箱 <em>{{ userEmail }}</em>。",
+  "A full export might take some time, consider exporting a single document or collection. You may leave this page once the export has started – if you have notifications enabled, we will email a link to <em>{{ userEmail }}</em> when it’s complete.": "完整导出可能需要一些时间，请考虑导出单个文档或文档集。导出的数据是 Markdown 格式的文档压缩包。当导出已开始时您可以离开此页面。如果你开启了通知，当导出完成后，我们会发送链接至电子邮件 <em>{{ userEmail }}</em>。",
   "Recent exports": "最近导出",
   "Manage optional and beta features. Changing these settings will affect the experience for all members of the workspace.": "管理可选功能和测试功能。更改这些设置将影响工作组内所有成员的使用。",
   "Separate editing": "独立编辑",
@@ -1108,11 +1108,11 @@
   "Getting started": "新手指南",
   "Tips on getting started with features and functionality": "有关特性和功能的入门提示",
   "New features": "新特性",
-  "Receive an email when new features of note are added": "及时获取重要功能更新的邮件通知",
+  "Receive an email when new features of note are added": "及时获取重要功能更新的电子邮件通知",
   "Notifications saved": "通知配置已保存",
   "Unsubscription successful. Your notification settings were updated": "取消订阅成功。你的通知设置已更新",
-  "Manage when and where you receive email notifications.": "自定义邮件通知的接收时间与位置。",
-  "The email integration is currently disabled. Please set the associated environment variables and restart the server to enable notifications.": "电子邮箱集成当前已禁用。请配置相关环境变量并重新启动服务以启用通知。",
+  "Manage when and where you receive email notifications.": "自定义电子邮件通知的接收时间与位置。",
+  "The email integration is currently disabled. Please set the associated environment variables and restart the server to enable notifications.": "电子邮件集成当前已禁用。请配置相关环境变量并重新启动服务以启用通知。",
   "Preferences saved": "首选项已保存",
   "Delete account": "删除账户",
   "Manage settings that affect your personal experience.": "调整个性化设置",
@@ -1142,7 +1142,7 @@
   "Settings that impact the access, security, and content of your workspace.": "工作区全局设置：访问权限、安全性与内容管理。",
   "Allow members to sign-in with {{ authProvider }}": "允许成员使用 {{ authProvider }} 登录",
   "Disabled": "已禁用",
-  "Allow members to sign-in using their email address": "允许成员使用他们的电子邮箱地址登录",
+  "Allow members to sign-in using their email address": "允许成员使用他们的电子邮件登录",
   "The server must have SMTP configured to enable this setting": "服务器必须配置 SMTP 以启用此设置",
   "Access": "访问",
   "Allow users to send invites": "允许用户发送邀请",
@@ -1170,12 +1170,12 @@
   "Alphabetical": "按字母顺序排列",
   "There are no templates just yet.": "尚无可用模板。",
   "{{ teamName }} is using {{ appName }} to share documents, please login to continue.": "{{ teamName }} 正在使用 {{ appName }} 共享文档，请登录以继续。",
-  "A confirmation code has been sent to your email address, please enter the code below to permanently destroy this workspace.": "验证码已经发送至您的电子邮箱，请在下面输入代码以永久删除此工作区。",
+  "A confirmation code has been sent to your email address, please enter the code below to permanently destroy this workspace.": "验证码已发送至您的电子邮件，请在下面输入代码以永久删除此工作区。",
   "Confirmation code": "验证码",
   "Deleting the <1>{{workspaceName}}</1> workspace will destroy all collections, documents, users, and associated data. You will be immediately logged out of {{appName}}.": "删除 <1>{{workspaceName}}</1> 工作区将销毁所有文档集、文档、用户和关联数据。 您将立即登出 {{appName}}。",
   "Please note that workspaces are completely separated. They can have a different domain, settings, users, and billing.": "请注意，工作区是完全分离的。它们可以有不同的域、设置、用户和账单。",
   "You are creating a new workspace using your current account — <em>{{email}}</em>": "你正在使用当前账户创建新的工作区 —— <em>{{email}}</em>",
-  "To create a workspace under another email please sign up from the homepage": "若需使用其他电子邮箱创建工作区，请前往首页完成注册。",
+  "To create a workspace under another email please sign up from the homepage": "若需使用其它电子邮件创建工作区，请前往首页完成注册。",
   "Trash emptied": "回收站为空",
   "Are you sure you want to permanently delete all the documents in Trash? This action is immediate and cannot be undone.": "您确定要永久删除回收站中的所有文档吗？此操作是立即的且无法撤消。",
   "Recently deleted": "最近删除的",
