fix: New German translations from Crowdin [ci skip]

--- a/shared/i18n/locales/de_DE/translation.json
+++ b/shared/i18n/locales/de_DE/translation.json
@@ -33,7 +33,7 @@
   "New template": "Neue Vorlage",
   "Delete comment": "Kommentar löschen",
   "Mark as resolved": "Als gelöst markieren",
-  "Thread resolved": "Thread gelöst",
+  "Thread resolved": "Diskussion gelöst",
   "Mark as unresolved": "Als ungelöst markieren",
   "View reactions": "Reaktionen anzeigen",
   "Reactions": "Reaktionen",
@@ -286,7 +286,7 @@
   "Including uploaded images and files in the exported data": "Einbeziehung hochgeladener Bilder und Dateien in die exportierten Daten",
   "{{count}} more user": "{{count}} mehr Nutzer",
   "{{count}} more user_plural": "{{count}} weitere Nutzer",
-  "Filter options": "Filter options",
+  "Filter options": "Filteroptionen",
   "Filter": "Filter",
   "No results": "Keine Ergebnisse",
   "{{authorName}} created <3></3>": "{{authorName}} hat <3></3> erstellt",
@@ -1089,7 +1089,7 @@
   "Document updated": "Dokument aktualisiert",
   "Receive a notification when a document you are subscribed to is edited": "Benachrichtigung erhalten, wenn ein Dokument, das Sie abonniert haben, bearbeitet wird",
   "Comment posted": "Kommentar veröffentlicht",
-  "Receive a notification when a document you are subscribed to or a thread you participated in receives a comment": "Erhalten Sie eine Benachrichtigung, wenn ein Dokument, das Sie abonniert haben oder ein Thread an dem Sie teilgenommen haben, einen Kommentar erhält",
+  "Receive a notification when a document you are subscribed to or a thread you participated in receives a comment": "Erhalten Sie eine Benachrichtigung, wenn ein Dokument, das Sie abonniert haben oder eine Diskussion an der Sie teilgenommen haben, einen Kommentar erhält",
   "Mentioned": "Erwähnt",
   "Receive a notification when someone mentions you in a document or comment": "Erhalten Sie eine Benachrichtigung, wenn jemand Sie in einem Dokument oder einem Kommentar erwähnt",
   "Receive a notification when a comment thread you were involved in is resolved": "Benachrichtigung erhalten, wenn ein Kommentar-Thread, an dem Sie beteiligt waren, gelöst wurde",
