fix: New French translations from Crowdin [ci skip]

--- a/shared/i18n/locales/fr_FR/translation.json
+++ b/shared/i18n/locales/fr_FR/translation.json
@@ -475,10 +475,12 @@
   "Keep as link": "Garder comme lien",
   "Mention": "Mentionner",
   "Embed": "Intégrer",
-  "Add column after": "Ajouter une colonne après",
-  "Add column before": "Ajouter une colonne avant",
-  "Add row after": "Ajouter une ligne après",
-  "Add row before": "Ajouter une ligne avant",
+  "Insert after": "Insert after",
+  "Insert before": "Insert before",
+  "Move up": "Move up",
+  "Move down": "Move down",
+  "Move left": "Move left",
+  "Move right": "Move right",
   "Align center": "Aligner au centre",
   "Align left": "Aligner à gauche",
   "Align right": "Aligner à droite",
