fix: New Hungarian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/hu_HU/translation.json
+++ b/shared/i18n/locales/hu_HU/translation.json
@@ -475,10 +475,12 @@
   "Keep as link": "Keep as link",
   "Mention": "Mention",
   "Embed": "Beágyazott",
-  "Add column after": "Oszlop hozzáadása utána",
-  "Add column before": "Oszlop hozzáadása előtte",
-  "Add row after": "Add row after",
-  "Add row before": "Oszlop hozzáadása előtte",
+  "Insert after": "Insert after",
+  "Insert before": "Insert before",
+  "Move up": "Move up",
+  "Move down": "Move down",
+  "Move left": "Move left",
+  "Move right": "Move right",
   "Align center": "Középre igazítás",
   "Align left": "Balra igazítás",
   "Align right": "Jobbra igazítás",
