fix: New Polish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/pl_PL/translation.json
+++ b/shared/i18n/locales/pl_PL/translation.json
@@ -475,10 +475,12 @@
   "Keep as link": "Zachowaj jako link",
   "Mention": "Wzmianka",
   "Embed": "Osadzenie",
-  "Add column after": "Dodaj kolumnę po",
-  "Add column before": "Dodaj kolumnę przed",
-  "Add row after": "Dodaj wiersz po",
-  "Add row before": "Dodaj wiersz przed",
+  "Insert after": "Insert after",
+  "Insert before": "Insert before",
+  "Move up": "Move up",
+  "Move down": "Move down",
+  "Move left": "Move left",
+  "Move right": "Move right",
   "Align center": "Wyrównaj do środka",
   "Align left": "Wyrównanie do lewej",
   "Align right": "Wyrównaj do prawej",
