fix: New Korean translations from Crowdin [ci skip]

--- a/shared/i18n/locales/ko_KR/translation.json
+++ b/shared/i18n/locales/ko_KR/translation.json
@@ -475,10 +475,12 @@
   "Keep as link": "링크로 유지",
   "Mention": "언급됨",
   "Embed": "내장",
-  "Add column after": "뒤에 열 추가",
-  "Add column before": "앞에 열 추가",
-  "Add row after": "뒤에 행 추가",
-  "Add row before": "앞에 행 추가",
+  "Insert after": "Insert after",
+  "Insert before": "Insert before",
+  "Move up": "Move up",
+  "Move down": "Move down",
+  "Move left": "Move left",
+  "Move right": "Move right",
   "Align center": "가운데 정렬",
   "Align left": "왼쪽 정렬",
   "Align right": "오른쪽 정렬",
