fix: New German translations from Crowdin [ci skip]

--- a/shared/i18n/locales/de_DE/translation.json
+++ b/shared/i18n/locales/de_DE/translation.json
@@ -475,10 +475,12 @@
   "Keep as link": "Als Link beibehalten",
   "Mention": "Erwähnung",
   "Embed": "Einbetten",
-  "Add column after": "Spalte dahinter hinzufügen",
-  "Add column before": "Spalte davor hinzufügen",
-  "Add row after": "Zeile danach einfügen",
-  "Add row before": "Zeile davor einfügen",
+  "Insert after": "Insert after",
+  "Insert before": "Insert before",
+  "Move up": "Move up",
+  "Move down": "Move down",
+  "Move left": "Move left",
+  "Move right": "Move right",
   "Align center": "Zentrieren",
   "Align left": "Links ausrichten",
   "Align right": "Rechts ausrichten",
