fix: New Spanish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/es_ES/translation.json
+++ b/shared/i18n/locales/es_ES/translation.json
@@ -475,10 +475,12 @@
   "Keep as link": "Mantener como enlace",
   "Mention": "Mencionar",
   "Embed": "Embed",
-  "Add column after": "Agregar columna después",
-  "Add column before": "Agregar columna antes",
-  "Add row after": "Añadir fila después",
-  "Add row before": "Añadir fila antes",
+  "Insert after": "Insert after",
+  "Insert before": "Insert before",
+  "Move up": "Move up",
+  "Move down": "Move down",
+  "Move left": "Move left",
+  "Move right": "Move right",
   "Align center": "Centrar",
   "Align left": "Alinear a la izquierda",
   "Align right": "Alinear a la derecha",
