fix: New Czech translations from Crowdin [ci skip]

--- a/shared/i18n/locales/cs_CZ/translation.json
+++ b/shared/i18n/locales/cs_CZ/translation.json
@@ -475,10 +475,12 @@
   "Keep as link": "Zachovat jako odkaz",
   "Mention": "Mention",
   "Embed": "Embed",
-  "Add column after": "Přidat sloupec za",
-  "Add column before": "Přidat sloupec před",
-  "Add row after": "Přidat řádek za",
-  "Add row before": "Přidat řádek před",
+  "Insert after": "Insert after",
+  "Insert before": "Insert before",
+  "Move up": "Move up",
+  "Move down": "Move down",
+  "Move left": "Move left",
+  "Move right": "Move right",
   "Align center": "Zarovnat na střed",
   "Align left": "Zarovnat vlevo",
   "Align right": "Zarovnat vpravo",
