fix: New Italian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/it_IT/translation.json
+++ b/shared/i18n/locales/it_IT/translation.json
@@ -475,10 +475,12 @@
   "Keep as link": "Mantieni come link",
   "Mention": "Menzione",
   "Embed": "Incorpora",
-  "Add column after": "Aggiungi colonna dopo",
-  "Add column before": "Aggiungi colonna prima",
-  "Add row after": "Aggiungi riga dopo",
-  "Add row before": "Aggiungi riga prima",
+  "Insert after": "Insert after",
+  "Insert before": "Insert before",
+  "Move up": "Move up",
+  "Move down": "Move down",
+  "Move left": "Move left",
+  "Move right": "Move right",
   "Align center": "Allinea al centro",
   "Align left": "Allinea a sinistra",
   "Align right": "Allinea a destra",
