fix: New Japanese translations from Crowdin [ci skip]

--- a/shared/i18n/locales/ja_JP/translation.json
+++ b/shared/i18n/locales/ja_JP/translation.json
@@ -475,10 +475,12 @@
   "Keep as link": "リンクとして保持",
   "Mention": "メンション",
   "Embed": "埋め込み",
-  "Add column after": "後ろに列を挿入",
-  "Add column before": "前に列を挿入",
-  "Add row after": "後ろに行を挿入",
-  "Add row before": "前に行を挿入",
+  "Insert after": "Insert after",
+  "Insert before": "Insert before",
+  "Move up": "Move up",
+  "Move down": "Move down",
+  "Move left": "Move left",
+  "Move right": "Move right",
   "Align center": "中央揃え",
   "Align left": "左揃え",
   "Align right": "右揃え",
