fix: New Dutch translations from Crowdin [ci skip]

--- a/shared/i18n/locales/nl_NL/translation.json
+++ b/shared/i18n/locales/nl_NL/translation.json
@@ -475,10 +475,12 @@
   "Keep as link": "Behoud als link",
   "Mention": "Vermelding",
   "Embed": "Insluiten",
-  "Add column after": "Kolom toevoegen",
-  "Add column before": "Kolom ervoor toevoegen",
-  "Add row after": "Rij toevoegen",
-  "Add row before": "Rij invoegen",
+  "Insert after": "Insert after",
+  "Insert before": "Insert before",
+  "Move up": "Move up",
+  "Move down": "Move down",
+  "Move left": "Move left",
+  "Move right": "Move right",
   "Align center": "Centreer",
   "Align left": "Links uitlijnen",
   "Align right": "Rechts uitlijnen",
