fix: New Swedish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/sv_SE/translation.json
+++ b/shared/i18n/locales/sv_SE/translation.json
@@ -475,10 +475,12 @@
   "Keep as link": "Behåll som länk",
   "Mention": "Nämn",
   "Embed": "Bädda in",
-  "Add column after": "Lägg till kolumn efter",
-  "Add column before": "Lägg till kolumn före",
-  "Add row after": "Lägg till rad efter",
-  "Add row before": "Lägg till rad före",
+  "Insert after": "Insert after",
+  "Insert before": "Insert before",
+  "Move up": "Move up",
+  "Move down": "Move down",
+  "Move left": "Move left",
+  "Move right": "Move right",
   "Align center": "Centrera",
   "Align left": "Vänsterjustera",
   "Align right": "Högerjustera",
