fix: New Chinese Simplified translations from Crowdin [ci skip]

--- a/shared/i18n/locales/zh_CN/translation.json
+++ b/shared/i18n/locales/zh_CN/translation.json
@@ -475,10 +475,12 @@
   "Keep as link": "保留为链接",
   "Mention": "提及",
   "Embed": "嵌入",
-  "Add column after": "在后面添加列",
-  "Add column before": "在前面添加列",
-  "Add row after": "在后面添加行",
-  "Add row before": "在前面添加行",
+  "Insert after": "Insert after",
+  "Insert before": "Insert before",
+  "Move up": "Move up",
+  "Move down": "Move down",
+  "Move left": "Move left",
+  "Move right": "Move right",
   "Align center": "居中对齐",
   "Align left": "左对齐",
   "Align right": "右对齐",
