fix: New Chinese Traditional translations from Crowdin [ci skip]

--- a/shared/i18n/locales/zh_TW/translation.json
+++ b/shared/i18n/locales/zh_TW/translation.json
@@ -475,10 +475,12 @@
   "Keep as link": "保留為連結",
   "Mention": "Mention",
   "Embed": "嵌入",
-  "Add column after": "在後面增加一欄",
-  "Add column before": "在前面增加一欄",
-  "Add row after": "在後面增加一列",
-  "Add row before": "在前面增加一列",
+  "Insert after": "Insert after",
+  "Insert before": "Insert before",
+  "Move up": "Move up",
+  "Move down": "Move down",
+  "Move left": "Move left",
+  "Move right": "Move right",
   "Align center": "置中對齊",
   "Align left": "靠左對齊",
   "Align right": "靠右對齊",
