fix: New Vietnamese translations from Crowdin [ci skip]

--- a/shared/i18n/locales/vi_VN/translation.json
+++ b/shared/i18n/locales/vi_VN/translation.json
@@ -475,10 +475,12 @@
   "Keep as link": "Giữ dạng liên kết",
   "Mention": "Nhắc đến",
   "Embed": "Nhúng",
-  "Add column after": "Thêm cột phía sau",
-  "Add column before": "Thêm cột phía trước",
-  "Add row after": "Thêm hàng bên dưới",
-  "Add row before": "Thêm hàng bên trên",
+  "Insert after": "Insert after",
+  "Insert before": "Insert before",
+  "Move up": "Move up",
+  "Move down": "Move down",
+  "Move left": "Move left",
+  "Move right": "Move right",
   "Align center": "Căn giữa",
   "Align left": "Căn trái",
   "Align right": "Căn phải",
