fix: New Portuguese, Brazilian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/pt_BR/translation.json
+++ b/shared/i18n/locales/pt_BR/translation.json
@@ -475,10 +475,12 @@
   "Keep as link": "Manter como link",
   "Mention": "Menção",
   "Embed": "Incorporar",
-  "Add column after": "Adicionar coluna depois",
-  "Add column before": "Adicionar coluna antes",
-  "Add row after": "Adicionar linha após",
-  "Add row before": "Adicionar linha antes",
+  "Insert after": "Insert after",
+  "Insert before": "Insert before",
+  "Move up": "Move up",
+  "Move down": "Move down",
+  "Move left": "Move left",
+  "Move right": "Move right",
   "Align center": "Alinhar ao centro",
   "Align left": "Alinhar à esquerda",
   "Align right": "Alinhar à direita",
