fix: New Norwegian Bokmal translations from Crowdin [ci skip]

--- a/shared/i18n/locales/nb_NO/translation.json
+++ b/shared/i18n/locales/nb_NO/translation.json
@@ -475,10 +475,12 @@
   "Keep as link": "Behold som lenke",
   "Mention": "Nevn",
   "Embed": "Bygg inn",
-  "Add column after": "Legg til kolonne etter",
-  "Add column before": "Sett inn kolonne før",
-  "Add row after": "Legg til rad etter",
-  "Add row before": "Sett inn rad før",
+  "Insert after": "Insert after",
+  "Insert before": "Insert before",
+  "Move up": "Move up",
+  "Move down": "Move down",
+  "Move left": "Move left",
+  "Move right": "Move right",
   "Align center": "Sentrer",
   "Align left": "Venstrejuster",
   "Align right": "Høyrejuster",
