fix: New Turkish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/tr_TR/translation.json
+++ b/shared/i18n/locales/tr_TR/translation.json
@@ -293,7 +293,7 @@
   "{{authorName}} opened <3></3>": "{{authorName}} opened <3></3>",
   "Search emoji": "Search emoji",
   "Search icons": "Arama simgeleri",
-  "Choose default skin tone": "Choose default skin tone",
+  "Choose default skin tone": "",
   "Show menu": "Menüyü göster",
   "Icon Picker": "Icon Picker",
   "Icons": "Simgeler",
