fix: New Ukrainian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/uk_UA/translation.json
+++ b/shared/i18n/locales/uk_UA/translation.json
@@ -468,7 +468,9 @@
   "Replace": "Замінити",
   "Replace all": "Замінити все",
   "Image width": "Image width",
+  "Width": "Width",
   "Image height": "Image height",
+  "Height": "Height",
   "Profile picture": "Аватар",
   "Create a new doc": "Створіть новий документ",
   "{{ userName }} won't be notified, as they do not have access to this document": "{{ userName }} не буде повідомлено, тому що він не має доступу до цього документа",
@@ -497,8 +499,6 @@
   "Create a new child doc": "Create a new child doc",
   "Delete table": "Видалити таблицю",
   "Delete file": "Delete file",
-  "Width": "Width",
-  "Height": "Height",
   "Download file": "Download file",
   "Replace file": "Replace file",
   "Delete image": "Видалити зображення",
@@ -1125,7 +1125,7 @@
   "Show a hand cursor when hovering over interactive elements.": "Під час наведення вказівника на інтерактивні елементи показувати курсор у вигляді руки.",
   "Show line numbers": "Показувати номери рядків",
   "Show line numbers on code blocks in documents.": "Показувати номери рядків у блоках коду в документах.",
-  "When enabled, documents have a separate editing mode. When disabled, documents are always editable when you have permission.": "When enabled, documents have a separate editing mode. When disabled, documents are always editable when you have permission.",
+  "When enabled, documents have a separate editing mode. When disabled, documents are always editable when you have permission.": "Якщо увімкнено, документи мають окремий режим редагування. Коли вимкнено, документи завжди редагуються, коли у вас є дозволи.",
   "Remember previous location": "Запам'ятати попереднє місце розташування",
   "Automatically return to the document you were last viewing when the app is re-opened.": "Автоматично повертатись до документа, який ви переглядали, коли програма буде знову відкрита.",
   "Smart text replacements": "Smart text replacements",
